[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyntbci"
dynamic = ["version", "readme"]
description = "Python Noise-Tagging Brain-Computer Interface (PyntBCI)"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Jordy Thielen", email = "jordy.thielen@donders.ru.nl"},
]
keywords = ["bci", "classification", "cvep", "c-vep", "eeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib >= 3.7.0",
    "numpy >= 1.24.0",
    "scikit-learn >= 1.3.0",
    "scipy >= 1.10.0",
    "setuptools >= 57.0.0",
]

[project.urls]
Homepage = "https://github.com/thijor/pyntbci"

[tool.setuptools.dynamic]
version = {attr = "pyntbci.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["pyntbci*"]

[tool.setuptools.package-data]
"*" = ["capfiles/*.loc", "capfiles/*.txt"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"pyntbci/__init__.py" = ["F401"]  # intentional re-exports forming the package's public API
"pyntbci/tests/__init__.py" = ["F403", "F405"]  # intentional star imports to aggregate tests
