[metadata]
name = pyntbci
version = attr: pyntbci.__version__
description = Python Noise-Tagging Brain-Computer Interface (PyntBCI)
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://gitlab.socsci.ru.nl/jthielen/pyntbci
author = Jordy Thielen
author_email = jordy.thielen@donders.ru.nl
keywords = bci, classification, cvep, c-vep, eeg
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    h5py >= 3.10.0
    matplotlib >= 3.7.2
    mne >= 1.6.0
    numpy >= 1.25.2
    scikit-learn >= 1.3.0
    scipy >= 1.11.1
    seaborn >= 0.13.1
    setuptools >= 57.0.0

[options.package_data]
* = capfiles/*.loc, capfiles/*.txt, data/*.npz
